--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello React!</title>
+    <title>Events List</title>
   </head>
   <body>
     <div id="main"></div>
