--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="main"></div>
-    <script src="/bundle.js" type="text/javascript"></script>
+    <script src="http://localhost:8080/static/bundle.js" type="text/javascript"></script>
   </body>
 </html>
