webpack exports style.css, cleanup filetree

--- a/static/index.html
+++ b/static/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Events List</title>
+    <link href="http://localhost:8080/static/tmp/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="main"></div>
-    <script src="http://localhost:8080/static/bundle.js" type="text/javascript"></script>
+    <script src="http://localhost:8080/static/tmp/bundle.js" type="text/javascript"></script>
   </body>
 </html>
