close link html

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Events List</title>
-    <link href="http://events-list.herokuapp.com/public/build/style.css" rel="stylesheet" type="text/css" />
+    <link href="http://events-list.herokuapp.com/public/build/style.css" rel="stylesheet" type="text/css" ></link>
   </head>
   <body>
     <div id="main"></div>
