--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Events List</title>
-    <link href="http://localhost:8081/public/build/style.css" rel="stylesheet" type="text/css" ></link>
+    
   </head>
   <body>
     <div id="main"></div>
-    <script src="http://localhost:8081/public/build/bundle.js" type="text/javascript"></script>
+    <script src="http://events-list.herokuapp.com/public/build/bundle.js" type="text/javascript"></script>
   </body>
 </html>
