--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="main"></div>
-    <script src="http://events-list.herokuapp.com/public/build/bundle.js" type="text/javascript"></script>
+    <script src="http://events-list.herokuapp.com/public/bundle.js" type="text/javascript"></script>
   </body>
 </html>
